# wk

./: .env  Cargo.toml
src/: main.rs
src/kana/: mod.rs
src/kanji/: mod.rs
src/kanji/app/: mod.rs  session.rs
src/kanji/domain/: mod.rs  subject.rs
src/kanji/infrastructure/: mod.rs  storage.rs  wanikani.rs
