[package]
name = "wk"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
sha2 = "0.10"
hex = "0.4"
directories = "5.0"
